Simplifying tests